isort: Add typing_extensions to known_third_party.
Signed-off-by: Anders Kaseorg <anders@zulip.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [tool:isort]
 src_paths = .
+known_third_party = typing_extensions
 multi_line_output = 3
 include_trailing_comma = True
 use_parentheses = True
