--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,5 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - run: python -m pip install isort mypy
-      - run: python -m pip install -e .
+      - run: python -m pip install -r requirements.txt
       - run: ./example-lint
