--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,9 @@ src_paths = ["."]
 profile = "black"
 
 [tool.ruff]
+# See https://github.com/charliermarsh/ruff#rules for error code definitions.
+select = [
+    "I", # import sorting
+]
 src = ["."]
 target-version = "py38"
