--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ src_paths = ["."]
 profile = "black"
 
 [tool.mypy]
+scripts_are_modules = true
 strict = true
 enable_error_code = [
     "redundant-self",
@@ -15,6 +16,12 @@ enable_error_code = [
     "explicit-override",
 ]
 warn_unreachable = true
+
+[[tool.mypy.overrides]]
+module = [
+    "setuptools.*",
+]
+ignore_missing_imports = true
 
 [tool.ruff]
 # See https://github.com/charliermarsh/ruff#rules for error code definitions.
