--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ module = [
 ignore_missing_imports = true
 
 [tool.ruff]
+src = ["."]
+target-version = "py38"
+
+[tool.ruff.lint]
 # See https://github.com/charliermarsh/ruff#rules for error code definitions.
 select = [
     "ANN", # annotations
@@ -72,5 +76,3 @@ extend-ignore = [
     "S603", # `subprocess` call: check for execution of untrusted input
     "S607", # Starting a process with a partial executable path
 ]
-src = ["."]
-target-version = "py38"
